contour/manifests/echoserver-gatewayapi-tcproute.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: echoserver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echoserver
    spec:
      containers:
      - name: echoserver
        image: gcr.io/k8s-staging-ingressconformance/echoserver:v20210922-cec7cf2
        ports:
        - name: http-api
          containerPort: 3000
        # readinessProbe:
        #   httpGet:
        #     path: /health
        #     port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
spec:
  ports:
  - name: http
    port: 80
    targetPort: http-api
  selector:
    app.kubernetes.io/name: echoserver
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: echoserver
spec:
  parentRefs:
  - name: contour
    namespace: projectcontour
    sectionName: custom-protocol
  rules:
  - backendRefs:
    - name: echoserver
      port: 80
